# ai-income-analyzer

./: .env  .gitignore  README.md  config.json  pyproject.toml
income_analyzer/: __main__.py
income_analyzer/common/: constants.py
income_analyzer/config/: __init__.py  config.py
income_analyzer/data_processing/: __init__.py  data_processor.py
income_analyzer/llm/: __init__.py  llm_manager.py  prompt_debug_handler.py
income_analyzer/vector_store/: __init__.py  vector_store_manager.py
research/: research_dataset.ipynb
